--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" class="scroll">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="..\src\assets\Images\aoe3_logo.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>AOE III Decks</title>
   </head>
   <body>
     <div id="root"></div>
