photos issue resolve

--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en" class="scroll">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="..\src\assets\Images\aoe3_logo.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="\aoe3_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AOE III Decks</title>
   </head>
